# Embedded2017

./: .gitignore  gruppe.txt
Aufgabe-1-1-Marquardt-Gabrecht-Hinrichs/: Aufgabe-1-1-Marquardt-Gabrecht-Hinrichs.atsln  Aufgabe-1-1-Marquardt-Gabrecht-Hinrichs.atsuo
Aufgabe-1-2-Marquardt-Gabrecht-Hinrichs/: Aufgabe-1-2-Marquardt-Gabrecht-Hinrichs.atsln  Aufgabe-1-2-Marquardt-Gabrecht-Hinrichs.atsuo
Aufgabe-1-2-Marquardt-Gabrecht-Hinrichs/Pattern-Saver/: Pattern-Saver-Lib.cproj  meson.build
Aufgabe-1-2-Marquardt-Gabrecht-Hinrichs/Pattern-Saver/builddir/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json
Aufgabe-1-2-Marquardt-Gabrecht-Hinrichs/Pattern-Saver/builddir/meson-logs/: meson-log.txt  testlog.json  testlog.txt
Aufgabe-1-2-Marquardt-Gabrecht-Hinrichs/Pattern-Saver/builddir/meson-private/: patternsaver.pc
Aufgabe-1-2-Marquardt-Gabrecht-Hinrichs/Pattern-Saver/builddir/src/patternsaver@sha/src/: libpatternsaver.so.symbols
Aufgabe-1-2-Marquardt-Gabrecht-Hinrichs/Pattern-Saver/builddir/test/: testexe
Aufgabe-1-2-Marquardt-Gabrecht-Hinrichs/Pattern-Saver/include/: bit_operations.h  meson.build  pattern_save.h
Aufgabe-1-2-Marquardt-Gabrecht-Hinrichs/Pattern-Saver/src/: bit_operations.c  meson.build  pattern_save.c
Aufgabe-1-2-Marquardt-Gabrecht-Hinrichs/Pattern-Saver/test/: meson.build  test-pattern-save.c
Aufgabe-1-3-Marquardt-Gabrecht-Hinrichs/: Aufgabe-1-3-Marquardt-Gabrecht-Hinrichs.atsln
Aufgabe-2-Marquardt-Gabrecht-Hinrichs/: Programm ablauf.graphml
Aufgabe-2-Marquardt-Gabrecht-Hinrichs/Aufgabe2/: Aufgabe2.atsln  Aufgabe2_6_2(1).atsln  (+1 more)
(+65 files in other folders)
